# route-optimization-backend

./: .gitignore  Dockerfile  README.md  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  env-template
.github/workflows/: test.yaml
backend/: Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0812d97efaa7_modify_model.py  1eb5966b4f48_vehicle_break_name.py  3edb04947198_add_new_model.py  52cede9053fa_revice_constrain.py  82692040bf98_add_optimized.py  a483bc80eea3_add_optimized.py  cb4c161cefe4_add_new_constrain.py  ee03abf14121_delete_data.py
backend/app/api/: __init__.py  constraint.py  hub.py  route_optimization.py  tag.py  upload.py  vehicle.py  visit.py  vrp.py
backend/app/core/: config.py
backend/app/models/: __init__.py  constraint.py  hub.py  optimized.py  tag.py  user.py  vehicle.py  vehicle_break.py  vehicle_capacity.py  visit.py  visit_demand.py
backend/app/module/: route_optimization.py  vrp.py
backend/app/schemas/: constraint.py  geojson.py  hub.py  msg.py  request_params.py  tag.py  user.py  vehicle.py  visit.py
backend/static/: hub_sample.csv  hub_sample_single.csv  vehicle_sample.csv  vehicle_sample_single.csv  visit_sample.csv  visit_sample_single.csv
